# rust-prune-deploy

./: Cargo.toml  README.md
src/: main.rs
src/local_k8s/: deploy.rs
test_deploy/: deployment.yaml
