[package]
name = "rust-prune-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["runtime", "kube-client"] }
kube-client = "0.82.2"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }

